Actualizacion Pagina de aterrizaje v1

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   <main class="tools-grid">
 
     <!-- Enlace a /Concatenador/index.html -->
-    <a href="https://github.com/GhostDev-Seus/Tools/blob/fd0a20a92a6792fe759ac4c905345e45d4a79ea1/Content/ContenacionAvanzado" target="_blank" class="tool-card">
+    <a href="https://github.com/GhostDev-Seus/Tools/blob/fd0a20a92a6792fe759ac4c905345e45d4a79ea1/Content/ContenacionAvanzado/index.html" target="_blank" class="tool-card">
       <h2>🔗 Concatenador</h2>
       <p>Herramienta de concatenación</p>
     </a>
 
     <!-- Enlace a /Secure/index.html -->
-    <a href="https://github.com/GhostDev-Seus/Tools/blob/fd0a20a92a6792fe759ac4c905345e45d4a79ea1/Content/Secure/" target="_blank" class="tool-card">
+    <a href="https://github.com/GhostDev-Seus/Tools/blob/fd0a20a92a6792fe759ac4c905345e45d4a79ea1/Content/Secure/Secure.html" target="_blank" class="tool-card">
       <h2>🔒 Secure</h2>
       <p>Área segura</p>
     </a>
       
-    <a href="https://github.com/GhostDev-Seus/Tools/blob/fd0a20a92a6792fe759ac4c905345e45d4a79ea1/" target="_blank" class="tool-card">
+    <a href="https://github.com/GhostDev-Seus/Tools/blob/fd0a20a92a6792fe759ac4c905345e45d4a79ea1/index.html" target="_blank" class="tool-card">
       <h2> 🤖apagado automático</h2>
       <p>Programar apagado</p>
     </a>
