Actualizacion Pagina de aterrizaje v3

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main class="tools-grid">
 
     <!-- Enlace a /Concatenador/index.html -->
-    <a href="https://tools-y72x.onrender.com/Content/ContenacionAvanzado" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/ContenacionAvanzado/index.html" target="_blank" class="tool-card">
       <h2>🔗 Concatenador</h2>
       <p>Herramienta de concatenación</p>
     </a>
