--- a/Content/Shutdown/Index.html
+++ b/Content/Shutdown/Index.html
@@ -4,81 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Programar Apagado o Reinicio</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f6f9;
-      color: #333;
-      text-align: center;
-      padding: 40px;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    .container {
-      max-width: 500px;
-      margin: 0 auto;
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-    input[type="time"], select {
-      margin: 10px auto;
-      padding: 10px;
-      width: 200px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button {
-      margin-top: 20px;
-      padding: 12px 20px;
-      background-color: #3498db;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background-color: #2980b9;
-    }
-    .result {
-      margin-top: 20px;
-      padding: 15px;
-      background-color: #f1f1f1;
-      border-radius: 5px;
-      font-family: monospace;
-      font-size: 18px;
-      word-break: break-all;
-      display: none;
-    }
-    .error {
-      color: red;
-      margin-top: 15px;
-      font-style: italic;
-    }
-    .copy-btn {
-      margin-top: 10px;
-      padding: 8px 12px;
-      background-color: #27ae60;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-    .copy-btn:hover {
-      background-color: #219a52;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -101,63 +27,6 @@
     <div id="error" class="error"></div>
   </div>
 
-  <script>
-    function generarComando() {
-      // Limpiar resultados anteriores
-      const resultado = document.getElementById("resultado");
-      const errorDiv = document.getElementById("error");
-      resultado.style.display = "none";
-      errorDiv.textContent = "";
-
-      // Obtener valores
-      const timeInput = document.getElementById("shutdownTime").value;
-      const action = document.getElementById("action").value; // 's' o 'r'
-
-      if (!timeInput) {
-        errorDiv.textContent = "Por favor, selecciona una hora.";
-        return;
-      }
-
-      const [horas, minutos] = timeInput.split(":").map(Number);
-      const now = new Date();
-      let targetDate = new Date();
-      targetDate.setHours(horas, minutos, 0, 0);
-
-      // Si ya pasó, programa para mañana
-      if (targetDate <= now) {
-        targetDate.setDate(targetDate.getDate() + 1);
-      }
-
-      // Calcular tiempo en segundos
-      const diffSeconds = Math.floor((targetDate - now) / 1000);
-
-      // Generar comando según acción
-      const actionText = action === 's' ? 'Apagar' : 'Reiniciar';
-      const command = `shutdown -${action} -t ${diffSeconds}`;
-
-      // Mostrar resultado
-      resultado.innerHTML = `
-        <strong>Comando generado (${actionText}):</strong><br>
-        <span>${command}</span><br>
-        <button class="copy-btn" onclick="copiarComando(this)">📋 Copiar</button>
-      `;
-      resultado.style.display = "block";
-    }
-
-    // Función para copiar el comando desde el botón
-    function copiarComando(button) {
-      const command = button.parentElement.querySelector("span").textContent;
-      navigator.clipboard.writeText(command).then(() => {
-        button.textContent = "✅ Copiado";
-        setTimeout(() => {
-          button.textContent = "📋 Copiar";
-        }, 2000);
-      }).catch(err => {
-        console.error("Error al copiar:", err);
-        button.textContent = "❌ Error";
-      });
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
