Agregar en contet geenerado de contrasenas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       <h2> ✍ Conversor de moneda</h2>
       <p>Precios monedas a nivel mundial</p>
     </a>
+
+     <a href="https://tools-y72x.onrender.com/Content/GeneradorContrasenas/index.html" target="_blank" class="tool-card">
+      <h2> 🛡 Generar contraseñas</h2>
+      <p>Generador de contraseñas seguras </p>
+    </a>
       
   </main>
 
