Ajustando pagina de inicio

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </a>
 
      <a href="https://tools-y72x.onrender.com/Content/GeneradorContrasenas/index.html" target="_blank" class="tool-card">
-      <h2> 🛡 Generar contraseñas</h2>
-      <p>Generador de contraseñas seguras </p>
+      <h2> 🔥 Generar contraseñas</h2>
+      <p>Crea contraseñas seguras </p>
     </a>
       
   </main>
