Ajustando pagina de inicio

--- a/Content/GeneradorContrasenas/index.html
+++ b/Content/GeneradorContrasenas/index.html
@@ -12,7 +12,7 @@
     <div class="card">
       <div class="text-center mb-6">
         <h1 class="title">🔐 Generador de Contraseñas</h1>
-        <p class="subtitle">Crea contraseñas seguras en tu navegador</p>
+        <p class="subtitle">Crea contraseñas seguras para tus cuentas</p>
       </div>
 
       <!-- Resultado -->
