Agregar sesion de eliminar caracteres

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
       <h2> 🔥 Generar contraseñas</h2>
       <p>Crea contraseñas seguras </p>
     </a>
-      
+    
+     <a href="https://tools-y72x.onrender.com/Content/EliminarCaract/index.html" target="_blank" class="tool-card">
+      <h2> ❌ Eliminicar Caracteres</h2>
+      <p>Remover caracteres especiales </p>
+    </a>
+
   </main>
 
   <footer>
