Actualizar pagina de inicio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </a>
     
      <a href="https://tools-y72x.onrender.com/Content/EliminarCaract/index.html" target="_blank" class="tool-card">
-      <h2> ❌ Eliminicar Caracteres</h2>
+      <h2> ❌ Eliminar Caracteres</h2>
       <p>Remover caracteres especiales </p>
     </a>
 
