agregar formateador sql

--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
       <h2> 🔥 Generar contraseñas</h2>
       <p>Crea contraseñas seguras </p>
     </a>
+
+     <a href="https://tools-y72x.onrender.com/Content/GeneradorContrasenas/index.html" target="_blank" class="tool-card">
+      <h2> 🔥 Generar contraseñas</h2>
+      <p>Crea contraseñas seguras </p>
+    </a>
     
-     <a href="https://tools-y72x.onrender.com/Content/EliminarCaract/index.html" target="_blank" class="tool-card">
-      <h2> ❌ Eliminar Caracteres</h2>
-      <p>Remover caracteres especiales </p>
+     <a href="https://tools-y72x.onrender.com/Content/sqlformatter/index.html" target="_blank" class="tool-card">
+      <h2> ❌ Format SQL</h2>
+      <p>Darle Formato Querys </p>
     </a>
 
   </main>
