--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <p>Crea contraseñas seguras </p>
     </a>
 
-     <a href="https://tools-y72x.onrender.com/Content/GeneradorContrasenas/index.html" target="_blank" class="tool-card">
-      <h2> 🔥 Generar contraseñas</h2>
-      <p>Crea contraseñas seguras </p>
+     <a href="https://tools-y72x.onrender.com/Content/EliminarCaract/index.html" target="_blank" class="tool-card">
+      <h2> ☢ Eliminar Caracteres Especiales</h2>
+      <p> Eliminacion de caracteres </p>
     </a>
     
      <a href="https://tools-y72x.onrender.com/Content/sqlformatter/index.html" target="_blank" class="tool-card">
@@ -53,7 +53,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Tools Hub — GhostDev </p>
+    <p>© 2025 Tools Hub — GhostDev 👻 </p>
   </footer>
 </body>
 </html>
