Creacion modulo directorio

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       <p>Darle Formato Querys </p>
     </a>
 
+     <a href="https://tools-y72x.onrender.com/Content/folder-creator/index.html" target="_blank" class="tool-card">
+      <h2> 💥 Crear directorios</h2>
+      <p> Directorios por cmd  </p>
+    </a>
+
   </main>
 
   <footer>
