Actualizacion pagina de atterizaje

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </a>
     
      <a href="https://tools-y72x.onrender.com/Content/sqlformatter/index.html" target="_blank" class="tool-card">
-      <h2> 💥 Format SQL</h2>
+      <h2> 🧾 Format SQL</h2>
       <p>Darle Formato Querys </p>
     </a>
 
