--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
       <p> Directorios por cmd  </p>
     </a>
 
+     <a href="https://tools-y72x.onrender.com/Content/querybuilder/index.html" target="_blank" class="tool-card">
+      <h2> 💥 Generador de consultar</h2>
+      <p>   </p>
+    </a>
+
   </main>
 
   <footer>
