Actualizacion Estilos Concatenador V1

--- a/Content/ContenacionAvanzado/index.html
+++ b/Content/ContenacionAvanzado/index.html
@@ -35,11 +35,11 @@
             <div class="input-section">
                 <div>
                     <label for="prefix">Prefijo (Op1):</label>
-                    <input type="text" id="prefix" placeholder="Ej: SELECT * FROM " aria-label="Prefijo para cada línea">
+                    <input type="text" id="prefix" placeholder=" " aria-label="Prefijo para cada línea">
                 </div>
                 <div>
                     <label for="suffix">Sufijo (Op2):</label>
-                    <input type="text" id="suffix" placeholder="Ej: WHERE id = " aria-label="Sufijo para cada línea">
+                    <input type="text" id="suffix" placeholder=" " aria-label="Sufijo para cada línea">
                 </div>
             </div>
             <div class="options-section">
