--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
       <h2>Apagado Automático</h2>
       <p>Programa el apagado de tu PC con un solo clic</p>
     </a>
+
+     <a href="https://tools-y72x.onrender.com/Content/PaletaColores/index.html" target="_blank" class="tool-card">
+      <i class="fa-solid fa-palette"></i>
+      <h2> Paleta Colores</h2>
+      <p>Genera tus colores favoritos</p>
+    </a>
+    
   </main>
 
   <footer>
