--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <p>Programa el apagado de tu PC con un solo clic</p>
     </a>
 
-     <a href="https://tools-y72x.onrender.com/Content/PaletaColores/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/PaletaColores/index.html" target="_blank" class="tool-card">
       <i class="fa-solid fa-palette"></i>
-      <h2> Paleta Colores</h2>
+      <h2>Paleta Colores</h2>
       <p>Genera tus colores favoritos</p>
     </a>
     
@@ -78,5 +78,8 @@
   <footer>
     <p>© 2025 Tools Hub — GhostDev 👻</p>
   </footer>
+
+  <!-- Carga el script externo -->
+  <script src="script.js"></script>
 </body>
 </html>
