--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 <body>
   <header>
+    <br>
     <h1>🛠️ Tools Hub</h1>
-    <p>Tu centro de herramientas esenciales para desarrolladores — 100% en el navegador</p>
+    <br>
+    <br>
+    <p>Herramientas esenciales para desarrolladores.</p>
   </header>
 
   <main class="tools-grid">
