--- a/Content/ContenacionAvanzado/index.html
+++ b/Content/ContenacionAvanzado/index.html
@@ -24,9 +24,9 @@
                     <li><kbd>X</kbd>: Copiar</li>
                 </ul>
             </div>
-
-            <div style="margin-top: -10%;margin-left: 40%;">
-                <button type="button" class="btn btn-primary"id="Menu">Menu principal</button>
+            
+            <div>
+                <button id="Menu">Menu principal</button>
             </div>
 
             <div class="theme-switcher-container">
