--- a/Content/Conversor/index.html
+++ b/Content/Conversor/index.html
@@ -68,7 +68,13 @@
     <footer>
       <p>Datos en tiempo real · API: exchangerate-api.com</p>
     </footer>
+
+      <div>
+                <button id="Menu">Menu principal</button>
+      </div>
+
   </div>
+
 
   <script src="script.js"></script>
 </body>
