--- a/index.html
+++ b/index.html
@@ -22,57 +22,57 @@
     <!-- Agrupación por categorías (visualmente) -->
     
     <!-- 🔧 Desarrollo -->
-    <a href="https://tools-y72x.onrender.com/Content/ContenacionAvanzado/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/ContenacionAvanzado/index.html" class="tool-card">
       <i class="fas fa-link"></i>
       <h2>Concatenador Avanzado</h2>
       <p>Combina, separa y formatea texto con reglas personalizadas</p>
     </a>
 
-    <a href="https://tools-y72x.onrender.com/Content/sqlformatter/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/sqlformatter/index.html" class="tool-card">
       <i class="fas fa-code"></i>
       <h2>Format SQL</h2>
       <p>Formatea consultas SQL con sangría y legibilidad profesional</p>
     </a>
 
-    <a href="https://tools-y72x.onrender.com/Content/foldercreator/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/foldercreator/index.html" class="tool-card">
       <i class="fas fa-folder-open"></i>
       <h2>Creador de Directorios</h2>
       <p>Genera estructuras de carpetas y copia el comando CMD para ejecutar</p>
     </a>
 
     <!-- 🔐 Seguridad -->
-    <a href="https://tools-y72x.onrender.com/Content/Secure/Secure.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/Secure/Secure.html" class="tool-card">
       <i class="fas fa-shield-alt"></i>
       <h2>Área Segura</h2>
       <p>Acceso restringido y funciones protegidas</p>
     </a>
 
-    <a href="https://tools-y72x.onrender.com/Content/GeneradorContrasenas/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/GeneradorContrasenas/index.html" class="tool-card">
       <i class="fas fa-key"></i>
       <h2>Generador de Contraseñas</h2>
       <p>Crea contraseñas criptográficamente seguras con opciones personalizadas</p>
     </a>
 
-    <a href="https://tools-y72x.onrender.com/Content/EliminarCaract/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/EliminarCaract/index.html" class="tool-card">
       <i class="fas fa-broom"></i>
       <h2>Eliminador de Caracteres</h2>
       <p>Limpia texto eliminando símbolos, paréntesis, guiones y espacios no deseados</p>
     </a>
 
     <!-- 📊 Productividad -->
-    <a href="https://tools-y72x.onrender.com/Content/Conversor/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/Conversor/index.html" class="tool-card">
       <i class="fas fa-exchange-alt"></i>
       <h2>Conversor de Monedas</h2>
       <p>Convierte entre 150+ monedas mundiales en tiempo real</p>
     </a>
 
-    <a href="https://tools-y72x.onrender.com/Content/Papagado/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/Papagado/index.html" class="tool-card">
       <i class="fas fa-power-off"></i>
       <h2>Apagado Automático</h2>
       <p>Programa el apagado de tu PC con un solo clic</p>
     </a>
 
-    <a href="https://tools-y72x.onrender.com/Content/PaletaColores/index.html" target="_blank" class="tool-card">
+    <a href="https://tools-y72x.onrender.com/Content/PaletaColores/index.html" class="tool-card">
       <i class="fa-solid fa-palette"></i>
       <h2>Paleta Colores</h2>
       <p>Genera tus colores favoritos</p>
