--- a/Content/EliminarCaract/index.html
+++ b/Content/EliminarCaract/index.html
@@ -44,6 +44,10 @@
               <button id="clearBtn" class="btn btn-outline-secondary btn-lg flex-fill">
                 <i class="fas fa-trash-alt me-2"></i>Limpiar Todo
               </button>
+            <div>
+                <button id="Menu">Menu principal</button>
+            </div>
+
             </div>
 
             <!-- Resultado -->
