--- a/Content/GeneradorContrasenas/index.html
+++ b/Content/GeneradorContrasenas/index.html
@@ -81,7 +81,7 @@
       >
         <i class="fas fa-sync-alt"></i> Generar Contraseña
       </button>
-
+      <button id="Menu">Menu principal</button>
       <!-- Mensaje -->
       <div id="message" class="message mt-4 text-center min-h-6"></div>
     </div>
