--- a/Content/Papagado/index.html
+++ b/Content/Papagado/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  <button id="Menu">Menu principal</button>
   <div class="container">
     <h1>⏰ Programar Acción del Sistema</h1>
     <p>Elige la acción y hora para tu computadora.</p>
