--- a/Content/sqlformatter/index.html
+++ b/Content/sqlformatter/index.html
@@ -16,6 +16,7 @@
           <div class="card-header bg-primary text-white text-center">
             <h3><i class="fas fa-code me-2"></i>Formateador SQL Server</h3>
             <p class="mb-0">Pega tu consulta y formátala automáticamente</p>
+            <button id="Menu">Menu principal</button>
           </div>
           <div class="card-body">
             <!-- Entrada -->
