--- a/Content/PaletaColores/index.html
+++ b/Content/PaletaColores/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎨 ChromaFlow — Paleta de Colores Dinámica</title>
+  <title>🎨 Paleta de Colores Dinámica</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
@@ -18,7 +18,7 @@
         <h1 class="display-4 fw-bold text-white mb-2">ChromaFlow</h1>
         <p class="lead text-light">Genera paletas de colores que fluyen como arte</p>
       </header>
-
+      <button id="Menu">Menu principal</button>
       <div class="row justify-content-center px-4">
         <div class="col-lg-10">
           <div class="card bg-transparent border-0 shadow-2xl">
