--- a/Content/foldercreator/index.html
+++ b/Content/foldercreator/index.html
@@ -59,6 +59,9 @@
               <button id="clearBtn" class="btn btn-outline-secondary btn-lg flex-fill">
                 <i class="fas fa-trash-alt me-2"></i>Limpiar Todo
               </button>
+             <div>
+                <button id="Menu">Menu principal</button>
+             </div>
             </div>
 
             <!-- Mensajes -->
