--- a/Content/Secure/Secure.html
+++ b/Content/Secure/Secure.html
@@ -29,7 +29,7 @@
       #Menu {
         width: 100%;
         padding: 14px 20px;
-        color: white;
+        color: rgb(14, 13, 13);
         border: none;
         border-radius: var(--border-radius);
         cursor: pointer;
