Actualizar frotn Apagado Automatico

--- a/Content/Papagado/index.html
+++ b/Content/Papagado/index.html
@@ -22,6 +22,7 @@
     <input type="time" id="shutdownTime" />
 
     <button onclick="generarComando()">Generar Comando</button>
+    <button id="Menu">Menu principal</button>
 
     <div id="resultado" class="result"></div>
     <div id="error" class="error"></div>
